# trantor

./: .clang-format  .cmake-format  CMakeLists.txt  ChangeLog.md  README.md  conanfile.txt  deps.macos-12+.sh  deps.rockylinux-9+.sh  deps.ubuntu-20.04+.sh  vcpkg.json
.github/workflows/: macos-clang-opt-off.yml  macos-clang-opt-on.yml  macos-clang.yml  rockylinux-gcc-opt-off.yml  rockylinux-gcc-opt-on.yml  rockylinux-gcc.yml  ubuntu-gcc-opt-off.yml  ubuntu-gcc-opt-on.yml  ubuntu-gcc.yml  windows-msvc-cmake-fetch.yml  windows-msvc-conan.yml  windows-msvc-opt-off.yml  windows-msvc-vcpkg.yml  windows-msvc.yml
cmake/: BuildDependencies.cmake  SetBotan.cmake  SetBotan3.cmake  SetBuildOptions.cmake  SetCAres.cmake  SetConan.cmake  SetCrypto.cmake  SetDoxygen.cmake  SetInstall.cmake  SetOpenssl.cmake  SetOptionsDependencies.cmake  SetSpdlog.cmake  SetSystemAndCompiler.cmake  SetTesting.cmake  SetTlsProvider.cmake  SetVcpkg.cmake
cmake_modules/: FindBotan.cmake  Findc-ares.cmake
trantor/: NonCopyable.h  ObjectPool.h  callbacks.h
trantor/logger/: AsyncFileLogger.cc  AsyncFileLogger.h  FixedBuffer.cc  FixedBuffer.h  Fmt.cc  Fmt.h  LogStream.cc  LogStream.h  Logger.cc  Logger.h  LoggerFile.cc  LoggerFile.h  RawLogger.cc  RawLogger.h  SourceFile.h
trantor/net/: Acceptor.cc  Acceptor.h  AsyncStream.h  Certificate.h  Connector.cc  Connector.h  InetAddress.cc  InetAddress.h  MsgBuffer.cc  MsgBuffer.h  Socket.cc  Socket.h  TLSPolicy.h  TcpClient.cc  TcpClient.h  TcpConnection.h  TcpConnectionImpl.cc  TcpConnectionImpl.h  TcpServer.cc  TcpServer.h  WindowsSupport.cc  WindowsSupport.h
trantor/net/buffernode/: AsyncStreamBufferNode.cc  BufferNode.h  FileBufferNodeUnix.cc  FileBufferNodeWin.cc  MemBufferNode.cc  StreamBufferNode.cc
trantor/net/core/: Channel.cc  Channel.h  ConcurrentTaskQueue.cc  ConcurrentTaskQueue.h  EventLoop.cc  EventLoop.h  EventLoopThread.cc  EventLoopThread.h  EventLoopThreadPool.cc  EventLoopThreadPool.h  LockFreeQueue.h  SerialTaskQueue.cc  SerialTaskQueue.h  TaskQueue.h  Timer.cc  Timer.h  TimerQueue.cc  TimerQueue.h  TimingWheel.cc  TimingWheel.h
trantor/net/core/poller/: EpollPoller.cc  EpollPoller.h  KQueue.cc  KQueue.h  PollPoller.cc  PollPoller.h  Poller.cc  Poller.h
trantor/net/resolver/: AresResolver.cc  AresResolver.h  NormalResolver.cc  NormalResolver.h  Resolver.h
trantor/net/tlsprovider/: BotanTLSProvider.cc  OpenSSLProvider.cc  TLSProvider.h
trantor/tests/: AsyncFileLoggerTest.cc  AsyncFileLoggerTest1.cc  CMakeLists.txt  ConcurrentTaskQueueTest.cc  DelayedSSLClientTest.cc  DelayedSSLServerTest.cc  DnsTest.cc  KickoffTest.cc  LoggerMacroTest.cc  LoggerTest.cc  MTLSClient.cc  MTLSServer.cc  PathConversionTest.cc  RunInLoopTest1.cc  RunInLoopTest2.cc  RunOnQuitTest.cc  SSLClientTest.cc  SSLServerTest.cc  SendfileTest.cc  SendstreamTest.cc  SerialTaskQueueTest1.cc  SerialTaskQueueTest2.cc  SpdLoggerTest.cc  TcpAsyncStreamServerTest.cc  TcpClientTest.cc  TcpServerTest.cc  TimerTest.cc  TimerTest1.cc  TimingWheelTest.cc
trantor/unittests/: CMakeLists.txt  DateUnittest.cc  HashUnittest.cc  InetAddressUnittest.cc  MsgBufferUnittest.cc  splitStringUnittest.cc  sslNameVerifyUnittest.cc  stringEncodingUnittest.cc
trantor/utils/: Date.cc  Date.h  Encoding.cc  Encoding.h  Hash.cc  Hash.h  StringFunctions.cc  StringFunctions.h  StringUtils.cc  StringUtils.h  Utilities.h  WindowsSupport.cc  WindowsSupport.h
trantor/utils/crypto/: blake2.cc  blake2.h  md5.cc  md5.h  sha1.cc  sha1.h  sha256.cc  sha256.h  sha3.cc  sha3.h
